@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-11-06T16:26:55Z",
+  "timestamp" : "2022-11-07T08:28:09Z",
   "count_outdated" : 217,
   "uniques_outdated" : 74,
-  "count" : 242,
+  "count" : 241,
   "uniques" : 87,
   "clones" : [
     {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
